# narayana

./: .env.example  .gitignore  ANALYSIS_FAKE_CODE.md  BUILD_STATUS.md  Cargo.toml  Dockerfile  FIXES_IMPLEMENTED.md  LAUNCH_STATUS.md  MISSING_FUNCTIONALITIES.md  Makefile  PRODUCTION_STATUS.md  QUICK_START.md  README.md  docker-compose.yml  nyn  robot  robot_demo.sh  rw  verify_robot_features.sh
narayana-api/: Cargo.toml
narayana-api/src/: connection.rs  dsl.rs  elegant.rs  graphql.rs  graphql_tests.rs  grpc.rs  grpc_advanced.rs  lib.rs  powerful.rs  query_dsl.rs  rest.rs  rest_advanced.rs  tests.rs  ultimate.rs  webhooks.rs  websocket.rs
narayana-bench/: Cargo.toml
narayana-bench/src/: brain_bench.rs  main.rs  native_bench.rs  performance_benchmarks.rs
narayana-cli/: Cargo.toml
narayana-cli/src/: console.rs  main.rs
narayana-cns/: Cargo.toml
narayana-cns/examples/: actuator_example.rs  basic_registration.rs  safety_example.rs
narayana-cns/src/: capability.rs  cns.rs  component.rs  config.rs  error.rs  lib.rs  registry.rs  router.rs  safety.rs  transport.rs
narayana-cns/tests/: capability_test.rs  registry_test.rs  routing_test.rs  safety_test.rs
narayana-core/: Cargo.toml
narayana-core/src/: banner.rs  column.rs  config.rs  error.rs  json_support.rs  lib.rs  row.rs  schema.rs  transaction.rs  transforms.rs  types.rs
narayana-eye/: COMPLETION_SUMMARY.md  Cargo.toml  DEEP_SECURITY_FIXES.md  FEATURES.md  FINAL_SECURITY_AUDIT.md  IMPLEMENTATION_COMPLETE.md  README.md  SECURITY_FIXES.md  TESTS_COMPLETE.md  TEST_COVERAGE.md  TEST_SUMMARY.md  ULTRA_DEEP_FIXES.md
narayana-eye/examples/: basic_vision.rs
narayana-eye/src/: camera.rs  config.rs  error.rs  lib.rs  scene.rs  utils.rs  vision_adapter.rs
narayana-eye/tests/: README.md  camera_test.rs  download_model_test.rs  edge_cases_test.rs  integration_test.rs  model_manager_test.rs  performance_test.rs  pipeline_test.rs  scene_analyzer_test.rs  security_test.rs
narayana-llm/: Cargo.toml
narayana-llm/src/: cache.rs  cache_tests.rs  config.rs  error.rs  function_calling.rs  function_calling_tests.rs  lib.rs  manager.rs  manager_tests.rs  planning.rs  planning_tests.rs  providers_tests.rs  rag.rs  reasoning.rs  reasoning_tests.rs
narayana-me/: ALL_BUGS_FIXED.md  ALL_FIXES_COMPLETE.md  BACKENDS_COMPLETE.md  BUGS_FIXED.md  BUG_FIXES.md  BUILD_AND_LAUNCH.md  COMPLETE_FEATURES.md  Cargo.toml  FEATURES.md  FEATURES_COMPLETE.md  FINAL_BUG_FIXES.md  FIXES_APPLIED.md  INTEGRATION_COMPLETE.md  PROVIDERS_SUMMARY.md  README.md  SECURITY_AUDIT_COMPLETE.md  SECURITY_FIXES.md  TESTS_SUMMARY.md  TEST_COVERAGE.md
narayana-me/examples/: basic_avatar.rs
narayana-me/src/: avatar_adapter.rs  avatar_broker.rs  bridge.rs  config.rs  cpl_integration.rs  error.rs  lib.rs  multimodal.rs  multimodal_integration.rs
narayana-me/tests/: concurrent_test.rs  error_handling_test.rs  integration_test.rs  provider_test.rs
narayana-query/: Cargo.toml
narayana-query/src/: advanced_analytics.rs  advanced_optimizer.rs  ai_analytics.rs  autocomplete.rs  executor.rs  hot_path.rs  lib.rs  materialized_views.rs  ml_integration.rs  operators.rs  optimizer.rs  plan.rs  vectorized.rs
narayana-rde/: Cargo.toml
narayana-rde/src/: actor.rs  auth.rs  events.rs  lib.rs  rate_limiter.rs  subscriptions.rs  transformations.rs
narayana-rde/tests/: complex_scenarios_tests.rs  edge_cases_tests.rs  error_recovery_tests.rs  integration_tests.rs  rate_limiting_tests.rs  schema_tests.rs  security_tests.rs  transformation_tests.rs  transport_tests.rs
narayana-sc/: ADDITIONAL_FIXES.md  ADVANCEMENTS_2025.md  BUGS_FIXED.md  BUILD_TEST_STATUS.md  COMPREHENSIVE_FEATURES.md  Cargo.toml  EXAMPLES_COMPLETE.md  EXAMPLES_SUMMARY.md  FEATURES_COMPLETE.md  FINAL_STATUS.md  README.md  SECURITY_FIXES.md  TEST_SUMMARY.md  VERIFICATION_STATUS.md
narayana-sc/examples/: README.md  audio_analysis.rs  basic_audio_capture.rs  comprehensive_capture.rs  cpl_integration.rs
narayana-sc/src/: advanced_features.rs  audio_adapter.rs  audio_analyzer.rs  audio_capture.rs  comprehensive_capture.rs  config.rs  cpl_integration.rs  error.rs  lib.rs  llm_integration.rs  streaming.rs
narayana-sc/tests/: README.md  advanced_features_tests.rs  edge_case_tests.rs  integration_tests.rs  performance_tests.rs  security_test.rs  unit_tests.rs
narayana-server/: Cargo.toml
narayana-server/src/: config_manager.rs  connection_pool.rs  health_monitor.rs  http.rs  lib.rs  llm_brain_wrapper.rs  main.rs  metrics.rs  oauth2.rs  scalability.rs  schema_loader.rs  security.rs  startup.rs  static_files.rs  tls.rs  websocket.rs  websocket_bridge.rs  websocket_manager.rs  workers.rs  zero_flaw_security.rs
narayana-spk/: ABSOLUTE_FINAL_VERIFICATION.md  ALL_FEATURES_COMPLETE.md  API_PROVIDERS_COMPLETE.md  BUG_FIXES_ROUND2.md  COMPLETE_FEATURES_CHECKLIST.md  COMPLETION_SUMMARY.md  Cargo.toml  FEATURES.md  FEATURES_COMPLETE.md  FEATURES_COMPLETE_FINAL.md  FINAL_VERIFICATION.md  IMPLEMENTATION_COMPLETE.md  README.md  SECURITY_FIXES.md  ULTIMATE_FINAL_CHECK.md
narayana-spk/examples/: basic_speak.rs  cpl_to_speech.rs  (+1 more)
narayana-storage/: Cargo.toml
narayana-wld/: Cargo.toml  README.md
tests/: Cargo.toml  README.md  advanced_analytics_tests.rs  advanced_indexing_tests.rs  advanced_joins_tests.rs  advanced_optimizer_tests.rs  ai_analytics_tests.rs  ai_optimized_tests.rs  api_endpoint_tests.rs  api_tests.rs  auth_api_tests.rs  auto_increment_tests.rs  auto_scaling_tests.rs  benchmark_tests.rs  binary_data_tests.rs  block_operations_tests.rs  bug_prevention.rs  cognitive_integration_test.rs  columnar_format_tests.rs  comprehensive_edge_cases.rs  comprehensive_placeholder_tests.rs  comprehensive_tests.rs  concurrency_tests.rs  consensus_tests.rs  coverage_tests.rs  data_type_tests.rs  database_manager_tests.rs  edge_cases.rs  elegant_api_tests.rs  encryption_tests.rs  error_handling.rs  error_propagation_tests.rs  hot_path_tests.rs  integration_test.rs  json_support_tests.rs  key_management_tests.rs  launch_kill_test.rs  materialized_views_tests.rs  ml_integration_tests.rs  mutable_data_tests.rs  (+29 more)
(+254 files in other folders)
