[workspace]
members = [
    "narayana-core",
    "narayana-storage",
    "narayana-query",
    "narayana-api",
    "narayana-server",
    "narayana-cli",
    "narayana-bench",
    "narayana-rde",
    "narayana-wld",
    "narayana-llm",
    "narayana-eye",
    "narayana-spk",
    "narayana-sc",
    "narayana-me",
    "narayana-cns",
    "tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NarayanaDB Contributors"]
license = "Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
# Arrow and Parquet are optional - can be enabled with "arrow" feature
# arrow = { version = "51.0", default-features = false, optional = true }
# parquet = { version = "51.0", features = ["async"], optional = true }

# Networking
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-gzip"] }
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"

# Database & Storage
rocksdb = { version = "0.21", features = ["lz4", "snappy", "zstd"] }
sled = "0.34"

# Compression
lz4 = "1.24"
zstd = "0.13"
snap = "1.1"

# Concurrency
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-prometheus = "0.6"
prometheus = "0.13"

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# Testing
criterion = "0.5"
proptest = "1.4"
tokio-test = "0.4"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4.35", features = ["serde"] }
bytes = "1.5"
ahash = "0.8"

# SIMD & Performance
simd-json = "0.13"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Security & Authentication
jsonwebtoken = "9.2"
rustls = "0.21"
rustls-pemfile = "1.0"
axum-server = "0.6"
urlencoding = "2.1"
sha2 = "0.10"
tempfile = "3.8"
hex = "0.4"
hmac = "0.12"

# Performance & Speed
lru = "0.12"
memmap2 = "0.9"

# Encryption & Security
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
aes = "0.8"
cbc = "0.1"
pbkdf2 = "0.12"
argon2 = "0.5"
scrypt = "0.11"
rand = "0.8"

# Configuration
toml = "0.8"
serde_yaml = "0.9"
num_cpus = "1.16"

# GPU Backends (optional - add directly to packages that need them)
# metal = { version = "0.27" }
# wgpu = { version = "20" }
# pollster = { version = "0.3" }

# ML Inference (optional - add directly to packages that need them)
# ort = { version = "2.0" }

[profile.release]
# Optimized release profile for native executables
opt-level = 3              # Maximum optimization
lto = true                 # Link-time optimization for smaller binaries
codegen-units = 1          # Better optimization, slower compilation
panic = "abort"            # Smaller binary size (no panic unwinding)
strip = true               # Strip debug symbols

[profile.release-lto]
# Aggressive LTO profile for smallest possible binary
inherits = "release"
lto = "fat"                # Full LTO across all crates
codegen-units = 1

[profile.release-fast]
# Fast release profile - optimized for speed over size
inherits = "release"
opt-level = 3
lto = "thin"               # Faster compilation
codegen-units = 16         # Faster compilation
strip = false              # Keep symbols for profiling

[profile.dev]
# Development profile - optimized for compilation speed
opt-level = 0
debug = true
incremental = true

[profile.test]
# Test profile - optimized for test execution speed
opt-level = 1
debug = true

