[package]
name = "narayana-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
# arrow = { workspace = true, optional = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
ahash = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
num_cpus = { workspace = true }
sha2 = { workspace = true }

