[package]
name = "narayana-rde"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
narayana-core = { path = "../narayana-core" }
narayana-storage = { path = "../narayana-storage" }
narayana-api = { path = "../narayana-api" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
futures = "0.3"

