[package]
name = "narayana-wld"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
narayana-core = { path = "../narayana-core" }
narayana-storage = { path = "../narayana-storage" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tokio-stream = { workspace = true }
bytes = { workspace = true }
ahash = { workspace = true }
chrono = { workspace = true }
futures-util = "0.3"

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }

